# atproto-haskell

./: AUDIT.md  README.md  cabal.project  cabal.project.local
atproto-car/: LICENSE  atproto-haskell-car.cabal
atproto-car/src/ATProto/: Car.hs
atproto-car/src/ATProto/Car/: BlockMap.hs  Cid.hs  DagCbor.hs  Parser.hs  Writer.hs
atproto-car/test/: Main.hs
atproto-car/test/Test/ATProto/Car/: Cid.hs  Parser.hs  Writer.hs
atproto-crypto/: atproto-haskell-crypto.cabal
atproto-crypto/src/ATProto/: Crypto.hs
atproto-crypto/src/ATProto/Crypto/: Base58.hs  DidKey.hs  EC.hs  Multikey.hs  Types.hs
atproto-crypto/test/: Main.hs
atproto-crypto/test/Test/ATProto/Crypto/: Base58.hs  DidKey.hs  EC.hs
atproto-did/: atproto-haskell-did.cabal
atproto-did/src/ATProto/: DID.hs
atproto-did/src/ATProto/DID/: Document.hs  Resolver.hs
atproto-did/src/ATProto/DID/Resolver/: Caching.hs  Dispatch.hs  PLC.hs  Web.hs
atproto-did/test/: Main.hs
atproto-did/test/Test/ATProto/DID/: Document.hs  Resolver.hs
atproto-firehose/: atproto-haskell-firehose.cabal
atproto-firehose/src/ATProto/: Firehose.hs
atproto-firehose/src/ATProto/Firehose/: Client.hs  Events.hs  Frame.hs
atproto-firehose/test/: Main.hs
atproto-firehose/test/Test/ATProto/Firehose/: Frame.hs
atproto-identity/: CHANGELOG.md  atproto-haskell-identity.cabal
atproto-identity/src/ATProto/: Identity.hs
atproto-identity/src/ATProto/Identity/: Handle.hs
atproto-identity/test/: Main.hs
atproto-identity/test/Test/ATProto/Identity/: Handle.hs
atproto-ipld/: atproto-haskell-ipld.cabal
atproto-ipld/src/ATProto/: Cid.hs  Ipld.hs
atproto-ipld/src/ATProto/Ipld/: Cbor.hs  Json.hs  Value.hs
atproto-ipld/test/: Main.hs
atproto-ipld/test/Test/ATProto/Ipld/: Cbor.hs  Json.hs
atproto-lex/: atproto-haskell-lex.cabal
atproto-lex/src/ATProto/: Lex.hs
atproto-lex/src/ATProto/Lex/: Cbor.hs  Codec.hs  Json.hs  Schema.hs  Validate.hs
atproto-lex/test/: Main.hs
atproto-lexicon/: atproto-haskell-lexicon.cabal
atproto-lexicon/src/ATProto/: Lexicon.hs
atproto-lexicon/src/ATProto/Lexicon/: Json.hs  Primitives.hs  Types.hs
atproto-lexicon/test/: Main.hs
atproto-mst/: atproto-haskell-mst.cabal
atproto-mst/src/ATProto/: MST.hs
atproto-mst/src/ATProto/MST/: Build.hs  Diff.hs  Encode.hs  Get.hs  Layer.hs  Node.hs  Tree.hs  Types.hs  Verify.hs
atproto-mst/test/: Main.hs
atproto-oauth/: atproto-haskell-oauth.cabal
atproto-oauth-provider/: CHANGELOG.md  atproto-haskell-oauth-provider.cabal
atproto-oauth-provider/src/ATProto/OAuth/: Provider.hs
atproto-oauth-provider/test/: Main.hs
atproto-oauth/src/ATProto/: OAuth.hs
atproto-oauth/src/ATProto/OAuth/: Client.hs  DPoP.hs  PKCE.hs  ServerMetadata.hs  Types.hs  XrpcClient.hs
atproto-oauth/test/: Main.hs
atproto-pds/: CHANGELOG.md  atproto-haskell-pds.cabal
atproto-pds-server/: CHANGELOG.md  atproto-haskell-pds-server.cabal
atproto-pds-server/app/: Main.hs
atproto-pds-server/src/ATProto/PDS/: Server.hs
atproto-pds-server/test/: Main.hs
atproto-pds/src/ATProto/: PDS.hs
atproto-pds/src/ATProto/PDS/: AccountStore.hs  ActorStore.hs  Commit.hs  Repo.hs  Storage.hs
atproto-pds/test/: Main.hs
atproto-plc/: CHANGELOG.md  atproto-haskell-plc.cabal
atproto-plc/src/ATProto/: PLC.hs
atproto-plc/src/ATProto/PLC/: Client.hs  Types.hs
atproto-plc/test/: Main.hs
atproto-repo/: atproto-haskell-repo.cabal
atproto-repo-verify/: atproto-haskell-repo-verify.cabal
atproto-repo-verify/src/ATProto/Repo/: Verify.hs
atproto-repo-verify/test/: Main.hs
atproto-repo/src/ATProto/: Repo.hs
atproto-repo/src/ATProto/Identity/: Defs.hs  ResolveDid.hs  ResolveHandle.hs  ResolveIdentity.hs  UpdateHandle.hs
atproto-repo/src/ATProto/Label/: Defs.hs
atproto-repo/src/ATProto/Repo/: Actor.hs  ApplyWrites.hs  Chat.hs  CommitMeta.hs  CreateRecord.hs  DeleteRecord.hs  DescribeRepo.hs  GetBlob.hs  GetProfile.hs  GetRecord.hs  Identity.hs  ListMissingBlobs.hs  ListRecords.hs  PutRecord.hs  Server.hs  Sync.hs  UploadBlob.hs
atproto-repo/src/ATProto/Server/: CheckAccountStatus.hs  CreateAccount.hs  CreateSession.hs  Defs.hs  DeleteSession.hs  DescribeServer.hs  GetServiceAuth.hs  GetSession.hs  RefreshSession.hs
atproto-repo/src/ATProto/Sync/: GetBlob.hs  GetLatestCommit.hs  GetRepo.hs  GetRepoStatus.hs  ListBlobs.hs  ListRepos.hs  NotifyOfUpdate.hs  RequestCrawl.hs
atproto-repo/test/: Main.hs
atproto-service-auth/: atproto-haskell-service-auth.cabal
atproto-service-auth/src/ATProto/: ServiceAuth.hs
atproto-service-auth/src/ATProto/ServiceAuth/: Create.hs  Verify.hs
atproto-service-auth/test/: Main.hs
atproto-syntax/: CHANGELOG.md  atproto-haskell-syntax.cabal
atproto-syntax/src/ATProto/: Syntax.hs
atproto-syntax/src/ATProto/Syntax/: AtUri.hs  DID.hs  Handle.hs  NSID.hs  RecordKey.hs  TID.hs
atproto-syntax/test/: Main.hs
atproto-tap/: atproto-haskell-tap.cabal
atproto-tap/src/ATProto/: Tap.hs
atproto-tap/src/ATProto/Tap/: Client.hs  Events.hs  WebSocket.hs  Webhook.hs
atproto-tap/test/: Main.hs
atproto-xrpc/: atproto-haskell-xrpc.cabal
atproto-xrpc-http/: atproto-haskell-xrpc-http.cabal
atproto-xrpc-http/src/ATProto/XRPC/: Http.hs
atproto-xrpc-http/test/: Main.hs
atproto-xrpc-server/: CHANGELOG.md  atproto-haskell-xrpc-server.cabal
atproto-xrpc-server/src/ATProto/XRPC/: Server.hs
atproto-xrpc/src/ATProto/: XRPC.hs
atproto-xrpc/src/ATProto/XRPC/: Client.hs  Types.hs
examples/feed-generator/: Main.hs  feed-generator-example.cabal
examples/feed-generator/FeedGenerator/: Auth.hs  Feed.hs  Types.hs
examples/oauth-cli/: Main.hs  oauth-cli-example.cabal
examples/statusphere-og/: Main.hs  statusphere-og-example.cabal
examples/statusphere-og/Statusphere/: Auth.hs  Database.hs  Ingester.hs  Types.hs  Views.hs
examples/statusphere-og/public/: styles.css
examples/statusphere-spa/: Main.hs  statusphere-spa-example.cabal
examples/statusphere-spa/Statusphere/: Auth.hs  Database.hs  Ingester.hs  Types.hs
examples/statusphere-spa/frontend/src/: Main.elm
examples/statusphere-spa/public/: index.html  styles.css
(+82 files in other folders)
