cabal-version:      3.0
name:               atproto-haskell-crypto
version:            0.1.0.0
synopsis:           AT Protocol cryptographic key types and utilities
description:
  Port of \@atproto\/crypto – key type definitions and multikey encoding
  helpers for the P-256 and secp256k1 curves used in the AT Protocol.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network, Cryptography
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      ATProto.Crypto
      ATProto.Crypto.Multikey
      ATProto.Crypto.Types
  build-depends:
      base        >= 4.14 && < 5
    , bytestring  >= 0.10 && < 0.13
  hs-source-dirs:   src
  default-language: Haskell2010
