cabal-version:      3.0
name:               atproto-haskell-crypto
version:            0.1.0.0
synopsis:           AT Protocol cryptographic operations
description:
  Port of \@atproto\/crypto – ECDSA signing and verification over P-256 and
  secp256k1 with low-S (non-malleable) compact signatures, base58btc multikey
  encoding, and did:key round-trip support.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network, Cryptography
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall
  default-extensions: OverloadedStrings

library
  import:           warnings
  exposed-modules:
      ATProto.Crypto
      ATProto.Crypto.Base58
      ATProto.Crypto.DidKey
      ATProto.Crypto.EC
      ATProto.Crypto.Multikey
      ATProto.Crypto.Types
  build-depends:
      base        >= 4.14 && < 5
    , bytestring  >= 0.10 && < 0.13
    , crypton     >= 0.32 && < 1.2
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite atproto-crypto-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Test.ATProto.Crypto.Base58
      Test.ATProto.Crypto.EC
      Test.ATProto.Crypto.DidKey
  build-depends:
      base                    >= 4.14 && < 5
    , bytestring              >= 0.10 && < 0.13
    , atproto-haskell-crypto
    , hedgehog                >= 1.4  && < 1.8
  hs-source-dirs:   test
  default-language: Haskell2010
