cabal-version:      3.0
name:               atproto-haskell-did
version:            0.1.0.0
synopsis:           AT Protocol DID document types
description:
  Port of \@atproto\/did – data types representing a resolved DID document.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      ATProto.DID
      ATProto.DID.Document
  build-depends:
      base  >= 4.14 && < 5
    , text  >= 1.2  && < 2.2
  hs-source-dirs:   src
  default-language: Haskell2010
