cabal-version:      3.0
name:               atproto-haskell-ipld
version:            0.1.0.0
synopsis:           AT Protocol IPLD value types and DAG-JSON/DAG-CBOR serialisation
description:
  Core 'LexValue' intermediate representation for the AT Protocol data model,
  together with DAG-JSON and DAG-CBOR encoding and decoding.  This is the
  shared pivot used by the @atproto-haskell-lex@ codec layer.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      ATProto.Ipld
      ATProto.Ipld.Value
      ATProto.Ipld.Json
      ATProto.Ipld.Cbor
  build-depends:
      base              >= 4.14 && < 5
    , aeson             >= 2.0  && < 2.3
    , base64-bytestring >= 1.0  && < 1.3
    , bytestring        >= 0.10 && < 0.13
    , cborg             >= 0.2  && < 0.3
    , containers        >= 0.6  && < 0.9
    , scientific        >= 0.3  && < 0.4
    , text              >= 1.2  && < 2.2
    , vector            >= 0.12 && < 0.14
  hs-source-dirs:   src
  default-extensions: OverloadedStrings
  default-language:   Haskell2010

test-suite atproto-ipld-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Test.ATProto.Ipld.Json
      Test.ATProto.Ipld.Cbor
  build-depends:
      base                  >= 4.14 && < 5
    , bytestring            >= 0.10 && < 0.13
    , containers            >= 0.6  && < 0.9
    , text                  >= 1.2  && < 2.2
    , atproto-haskell-ipld
    , hedgehog              >= 1.4  && < 1.8
  hs-source-dirs:   test
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
