cabal-version:      3.0
name:               atproto-haskell-lex
version:            0.1.0.0
synopsis:           AT Protocol Lexicon codec combinators (JSON + CBOR)
description:
  Profunctor-style codec combinators for the AT Protocol Lexicon type system.
  A @Codec a@ carries its schema, encoder, and decoder together so they can
  never drift apart.  Both JSON and CBOR are handled by the same codec via
  the shared 'LexValue' intermediate representation from @atproto-haskell-ipld@.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      ATProto.Lex
      ATProto.Lex.Codec
      ATProto.Lex.Schema
      ATProto.Lex.Json
      ATProto.Lex.Cbor
  build-depends:
      base                    >= 4.14 && < 5
    , aeson                   >= 2.0  && < 2.3
    , bytestring              >= 0.10 && < 0.13
    , cborg                   >= 0.2  && < 0.3
    , containers              >= 0.6  && < 0.9
    , profunctors             >= 5.6  && < 5.7
    , text                    >= 1.2  && < 2.2
    , atproto-haskell-ipld
  hs-source-dirs:   src
  default-extensions: OverloadedStrings
  default-language:   Haskell2010

test-suite atproto-lex-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Test.ATProto.Lex.Codec
  build-depends:
      base                    >= 4.14 && < 5
    , aeson                   >= 2.0  && < 2.3
    , bytestring              >= 0.10 && < 0.13
    , cborg                   >= 0.2  && < 0.3
    , hedgehog                >= 1.4  && < 1.8
    , text                    >= 1.2  && < 2.2
    , atproto-haskell-lex
    , atproto-haskell-ipld
  hs-source-dirs:   test
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
