cabal-version:      3.0
name:               atproto-haskell-lexicon
version:            0.1.0.0
synopsis:           AT Protocol Lexicon schema types
description:
  Port of \@atproto\/lexicon – data types representing the AT Protocol
  Lexicon schema language used to describe records, queries, procedures,
  and subscriptions.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      ATProto.Lexicon
      ATProto.Lexicon.Json
      ATProto.Lexicon.Primitives
      ATProto.Lexicon.Types
  build-depends:
      base        >= 4.14 && < 5
    , containers  >= 0.6  && < 0.9
    , text        >= 1.2  && < 2.2
    , atproto-haskell-syntax
  hs-source-dirs:   src
  default-language: Haskell2010
