cabal-version:      3.0
name:               atproto-haskell-lexicon
version:            0.1.0.0
synopsis:           AT Protocol Lexicon schema types and JSON parsing
description:
  Data types representing the AT Protocol Lexicon schema language, together
  with hand-written 'Data.Aeson.FromJSON' instances (no Template Haskell) for
  decoding @.lexicon.json@ files into Haskell values.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
      ATProto.Lexicon
      ATProto.Lexicon.Json
      ATProto.Lexicon.Primitives
      ATProto.Lexicon.Types
  build-depends:
      base        >= 4.14 && < 5
    , aeson       >= 2.0  && < 2.3
    , containers  >= 0.6  && < 0.9
    , text        >= 1.2  && < 2.2
    , atproto-haskell-syntax
  hs-source-dirs:   src
  default-extensions: OverloadedStrings
  default-language:   Haskell2010

test-suite atproto-lexicon-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Test.ATProto.Lexicon.Json
  build-depends:
      base                   >= 4.14 && < 5
    , aeson                  >= 2.0  && < 2.3
    , bytestring             >= 0.10 && < 0.13
    , text                   >= 1.2  && < 2.2
    , containers             >= 0.6  && < 0.9
    , hedgehog               >= 1.4  && < 1.8
    , atproto-haskell-lexicon
  hs-source-dirs:   test
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
