cabal-version:      3.0
name:               atproto-haskell-plc
version:            0.1.0.0
synopsis:           AT Protocol PLC directory client
description:
  Client library for the AT Protocol PLC (Placeholder) directory service.
  Supports creating genesis @did:plc@ operations, signing them with rotation
  keys, deriving the resulting DID, submitting operations to the PLC
  directory, and resolving DID documents.
license:            MIT
license-file:       LICENSE
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall
  default-extensions: OverloadedStrings

library
  import:           warnings
  exposed-modules:
      ATProto.PLC
      ATProto.PLC.Types
      ATProto.PLC.Client
  build-depends:
      base                       >= 4.14  && < 5
    , aeson                      >= 2.0   && < 2.3
    , bytestring                 >= 0.10  && < 0.13
    , cborg                      >= 0.2   && < 0.3
    , containers                 >= 0.6   && < 0.9
    , crypton                    >= 0.32  && < 1.2
    , http-client                >= 0.7   && < 0.8
    , http-client-tls            >= 0.3   && < 0.5
    , http-types                 >= 0.12  && < 0.13
    , memory                     >= 0.14  && < 0.19
    , text                       >= 1.2   && < 2.2
    , vector                     >= 0.12  && < 0.14
    , atproto-haskell-car
    , atproto-haskell-crypto
    , atproto-haskell-syntax
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite atproto-plc-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      Test.ATProto.PLC.Types
  build-depends:
      base                       >= 4.14  && < 5
    , bytestring                 >= 0.10  && < 0.13
    , containers                 >= 0.6   && < 0.9
    , text                       >= 1.2   && < 2.2
    , atproto-haskell-plc
    , atproto-haskell-crypto
    , atproto-haskell-syntax
    , hedgehog                   >= 1.4   && < 1.8
  hs-source-dirs:   test
  default-language: Haskell2010
